<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundimage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/title"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="653dp"
        android:fontFamily="@font/aclonica"
        android:includeFontPadding="true"
        android:scrollbarSize="12sp"
        android:text="@string/blab_me"
        android:textColor="#FFFCFC"
        android:textColorHighlight="@android:color/background_dark"
        android:textSize="30sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="408dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:includeFontPadding="true"
        android:inputType="textWebPassword"
        android:textColorHint="#FDFCFC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/user"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="479dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/signinbutton"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="250dp"
        android:text="@string/sign_in"
        android:textColor="#5A9317"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="250dp"
        android:text="@string/sign_up"
        android:textColor="#58970F"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="340dp" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="369dp"
        android:layout_marginRight="369dp"
        android:layout_marginBottom="696dp"
        android:background="#00FFFFFF"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/todo" />

</RelativeLayout>